resources/public/css/sass/main.scss
@import "style-guide-4.0.4/_sass/main";
@import "./_variables";
@import "./_quote_map";
@import "./_cost_of_living_viz";
@import "./_cost_of_living_income";

@import "./down_icon";

body {
  max-width: 100%;
  overflow-x: hidden;
  font-color: #333;
}

.side-nav {
  position: fixed;
  top: 0;
  width: 15vw;
  z-index: 99999;

  .side-nav-list {
    paddding-left: 0;
  }

  ul {
    margin: 0;
    position: absolute;
    top: 2vh;
    left: 0;
    list-style: none;
  }

  li {
    font-size: 1.1em;
    margin: 0;
  }

  .nav-item {
    background: #fff;
    padding: 0.25rem 0.5rem 0.5rem 1.5rem;

    a {
      text-decoration: none;
    }
  }

  .active {
    background-color: rgba(200, 200, 200, 0.6);
  }
}

.header {
  background-image:
    linear-gradient(
      rgba(0, 0, 0, 0.65),
      rgba(0, 0, 0, 0.65)
    ),
    url("../media/pexels-photo-95425.jpeg");
  background-size: cover;
  color: #000;
  height: 100vh;
  width: 100%;

  align-items: center;
  display: flex;
  justify-content: start;

  .header-content {
    z-index: 100;
    width: $content-width;

    margin-left: auto;
    margin-right: auto;

    padding-left: 4vw;
    padding-right: 4vw;

    color: $color-white;

    h1 {
      font-size: 4.5rem;
      line-height: 1em;
    }

    p {
      font-size: 1.3rem;
      line-height: $content-line-height;
    }

    .header-icon {
      width: 100%;
      height: 100%;
      padding: $spacing 0 $spacing 0;
      align-items: center;
      display: flex;
      position: relative;

      a {
        color: $color-white;
        text-decoration: none;
      }
    }
  }
}

.article-container, .cta {
  font-size: 1.2rem;
  margin-left: auto;
  margin-right: auto;
  max-width: $content-width;
  overflow-x: hidden;
  padding: $spacing 4vw $spacing 4vw;

  p, ul, li {
    font-size: 1.2rem;
    line-height: $content-line-height;
  }
}

.article-container {
  hr {
    margin-top: $spacing;
    margin-bottom: 0;
    border: none;
    border-top: 1px dotted #555;
    color: #fff;
    background-color: #fff;
    height: 1px;
  }

  .title {
    text-align: center;
    padding: 1rem;
    margin: 0;
  }

  .article-section, {
    padding-top: $spacing;
  }

  .aside-notes {
    background-color: $color-grey-300;
    margin: $spacing $spacing;
    padding: 1em 2em 1em 2em;
  }

  .notes {
    color: $color-grey-700;
    font-style: italic;
    padding-bottom: $spacing;
  }

  .profile-image {
    margin-top: 0.625rem;
    margin-bottom: 0.625rem;
    background-color: #ccc;
    height: 350px;
    width: 100%;
  }

  .profile {
    padding-bottom: $section-padding;
  }

  .profile-quote {
    font-style: italic;
    font-size: 1.2em;
  }

  .author {
    color: grey;
    font-style: normal;
    font-size: 0.95rem;
  }

  .visualization {
    padding-top: 0.5rem;
  }

  .visualization-placeholder{
    background-color: #ccc;
    height: 350px;
    width: 100%;
    text-align: center;
  }
}

#cta {
  height: 80vh;
}
.global-footer {
  margin-top: 0;
}

@media only screen and (max-width: 800px) {
  .side-nav {
    display: none;
  }

  .header .header-content h1 {
    font-size: 3.5rem;
  }
}

